generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  user

  @@map("user_role")
}

enum UserStatus {
  active
  banned

  @@map("user_status")
}

enum TwoFactorStatus {
  active
  inactive

  @@map("two_factor_status")
}

model Announcement {
  id        String   @id @default(uuid())
  title     String
  content   String? // Опциональный текст новости
  sentiment String   @default("ANNOUNCEMENT") // ANNOUNCEMENT, BULLISH, BEARISH
  createdAt DateTime @default(now())
}

model Wallet {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @unique @map("user_id") @db.Uuid
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  balance   Decimal  @default(0) @db.Decimal(18, 8)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz()

  @@map("wallet")
}

model TradePosition {
  id         String   @id @default(uuid()) @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  symbol     String   @db.VarChar()
  amount     Decimal  @db.Decimal(18, 8)
  entryPrice Decimal  @map("entry_price") @db.Decimal(18, 8)
  tp         Decimal? @db.Decimal(18, 8)
  sl         Decimal? @db.Decimal(18, 8)
  status     String   @default("OPEN") @db.VarChar(20)
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz()

  @@map("trade_position")
}

model Transaction {
  id String @id @default(uuid()) @db.Uuid

  // Кому принадлежит транзакция (пользователь)
  userId String @map("user_id") @db.Uuid
  user   User   @relation("UserTransactions", fields: [userId], references: [id], onDelete: Cascade)

  // Кто инициировал транзакцию (админ) - поле опциональное (?), т.к. обычные трейды идут без админа
  adminId String? @map("admin_id") @db.Uuid
  admin   User?   @relation("AdminDeposits", fields: [adminId], references: [id], onDelete: SetNull)

  type      String   @db.VarChar(20) // e.g., "BUY", "SELL", "DEPOSIT"
  amount    Decimal  @db.Decimal(18, 8)
  price     Decimal  @db.Decimal(18, 8)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz()

  @@map("transaction")
}

model LoginEmail {
  userId    String   @id @map("user_id") @db.Uuid
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  attempts  Int      @default(0) @db.Integer
  code      String   @db.VarChar()
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz()
  expiresAt DateTime @map("expires_at") @db.Timestamptz()

  @@map("login_email")
}

model TrackedSymbol {
  id        String   @id @default(uuid()) @db.Uuid
  symbol    String   @unique @db.VarChar()
  name      String?  @db.VarChar()
  isActive  Boolean  @default(true) @map("is_active")
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz()
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz()

  @@map("tracked_symbol")
}

model PasswordReset {
  userId    String   @id @map("user_id") @db.Uuid
  user      User     @relation(fields: [userId], references: [id])
  attempts  Int      @default(0) @db.Integer
  code      String   @db.VarChar()
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz()
  expiresAt DateTime @map("expires_at") @db.Timestamptz()

  @@map("password_reset")
}

model User {
  id              String          @id @db.Uuid
  role            UserRole
  firstName       String          @map("first_name") @db.VarChar()
  lastName        String          @map("last_name") @db.VarChar()
  email           String          @unique @db.VarChar()
  hash            String?         @db.VarChar()
  status          UserStatus      @map("user_status")
  createdAt       DateTime        @default(now()) @map("created_at") @db.Timestamptz()
  createdBy       String          @map("created_by") @db.Uuid
  twoFactorStatus TwoFactorStatus @default(active) @map("two_factor_status")

  passwordResets PasswordReset?
  loginEmail     LoginEmail?
  wallet         Wallet?
  positions      TradePosition[]

  // Обновленные связи для транзакций
  transactions      Transaction[] @relation("UserTransactions") // Транзакции пользователя
  processedDeposits Transaction[] @relation("AdminDeposits") // Транзакции, где этот юзер выступил админом

  @@map("user")
}
